--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI = 'mongodb://localhost:27017/social-media-api'
+MONGO_URI=mongodb://127.0.0.1:27017/social_media_api
 PORT = 5000
 JWT_SECRET = '@323asda!@#@!@#@!@#2324asdvzxc-_-'
