--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SocialMedia-Api",
+  "name": "socialmedia-api",
   "version": "1.0.0",
   "main": "index.js",
   "author": {
@@ -13,10 +13,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "joi": "^18.0.1",
-    "mongoose": "^8.18.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.0",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
