--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "socialmedia-api",
+  "name": "social-media-api",
   "version": "1.0.0",
   "main": "index.js",
   "author": {
-    "name": "Sheheryaar Ansar",
-    "email": "Sheryaarlong@gmail.com",
-    "url": "https://www.github.com/Sheryaar-Ansar"
+    "name": "OkashaNadeem, Sheheryaar Ansar, Umair",
+    "url": "https://github.com/Okashanadeem/Social-Media-API"
   },
   "scripts": {
     "start": "node index.js",
